add plex to kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:FuBsJK+6p7RF+vkXCpJBO0eGa6thpg0gj1ctfDBJhAfQj/WOK3L1w31koLWBy7vSXCDkBt8izOuF6L0FnMZbTno=,iv:EjR4e/k3lf1h0zM0960l1YLPOydsrKF+45aNt23vJRc=,tag:mfICgYQu0U+ouQzwfzc0oA==,type:comment]
-#ENC[AES256_GCM,data:HWkkdw39VJETYPuLTQEve13MK9KLDW4Xb7HhhKOJnKTrZtHtplIkMRduNxQ=,iv:1JhI+8fCgnnXg3nzgzlHGvauGcNk4G3GYs7cmfdDNbs=,tag:w87EKOEvpAtYbSjJeN3A1Q==,type:comment]
-VIP: ENC[AES256_GCM,data:HWzaizzGRRPo7I74Rg==,iv:zG01AWlkI6u2SyASmnr1c3dHlPwge1qaWJBZ15+st20=,tag:HfaZnaMCaeB8T8uz5XdvSA==,type:str]
-#ENC[AES256_GCM,data:hqKsuWn/1pQPQ8mzrOIobfJiugP+soEh4lJh,iv:31YVFmt6ksIDQD/eK1J6mYUDNtU9R34dwoN4/BI6y/M=,tag:zoXXa8XjWgwOq/1LeG38Rg==,type:comment]
-#ENC[AES256_GCM,data:KdDOTfZcGbAGN3M6y5iFSUvj9ZzpKgv+D220MVYoMQZ5YrFTvgMiKLZeuY986qcp7X2NBgraT60PtNhG2ypEsxf2cY+tX+OacX8yzfaUoBIHJ4FbtkhPjhU=,iv:MtWAlcmeotzus9sMSr2YGWRPI1wIPNp+P6jTgxvOSN4=,tag:9KunutlofgYKwCPvIGbumg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:7HfUn18CZ1muHTOyzeM=,iv:B4Pl9hzRZO1yP2U6S7xC2enHYNbJUsNwS4f2WPHllmg=,tag:piF538KAVHRLzw9ja/+fbg==,type:str]
-#ENC[AES256_GCM,data:Zdfr8xWfTsHqaQ8pgTMHTkmHW+jCi7xQU7B3Qa5WlayyPw==,iv:82Ed6VuSnZw4yZf0Y069en76oD7I3JkFUUh/HvnkCmw=,tag:xPR7dUzWosxuDpx+4TW0EA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:XMSpU3xBIEKccKeUyA==,iv:G4kC8OkN5sJY1ZMH4mde3tMaDCDSQyhT33J7tXQ3f98=,tag:WwEpQXApM4e4CWH43C7NRg==,type:str]
-#ENC[AES256_GCM,data:voY2Zlqc78B0EPYY81TXqa8qODo5Z9L/rIbYQxKOa1TV8WsVOsK9b7wrO7ftdoM=,iv:B71ctVkOl2w0DzW+RHhgNSaqhF9Z476xLuAuI7fe/uc=,tag:CLiWet4RRsW7fAmLi90DJg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:H4RFN3d7WNxGN6CGqzwa8/HY6qWX9FOkwN96rnsnVw==,iv:XynlVFi2BBBRsLipbSAoyVTir8PDyH2nVglFfoKNivM=,tag:qJMzLtA/E5hKSPI2Cmb2Fg==,type:str]
-#ENC[AES256_GCM,data:Zg6BvA9X+knt1CL8MC0lQh2dvVsq3ZAasnyosEctXbnVSMwmKANt/NBV/gSyY+Ljxx/1+nJLYD6cQry5iUY71jwEIjctQdzj4DmV5Ob4cKlVQw==,iv:WPGDXQUs264QNB1ekGhFKls38nf2OLNvUlFeMvfNCto=,tag:hJrFIVoRLgElgM8w0hYILg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:zOwNL2oB36efw/roDTvK,iv:4FWYzire6DFHDGfyWocl2+7/gk6kmkiE06LQ0dHVXzY=,tag:U+9SEo4fpSvN1/M8cFLQCg==,type:str]
-#ENC[AES256_GCM,data:1QSR4RrOB1eaful+BizZIUlTvf6VvsGaZoUNhpgB5EB+,iv:c3jEu9wypeX0hvADJPS1GELu9REm0Eu29K/5nt7icQ0=,tag:7XAbC86W8KSgPn/U1iRVGQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:lFOX762jvva7qIEfsF4R,iv:w05/c8fvu4I95Oa5fdzvL2qxqHTdVVN9CfmHNxQ7r4k=,tag:8JZxw7h7u7Ob7h+HTOY0yw==,type:str]
-#ENC[AES256_GCM,data:J/gH87hLlXBHc58gH0GmOpK5CRKHsfmnJ8QPW3qm5J5YBqw6PnH7fROFbOPbBOw5lo0cRiC+QJovjt6aI+gcjSmfNut9TJcoYf75Ror1tAw=,iv:dgXwJ3hlbrrlWY15cUVQuWQ8bes5p4JWj5Ukqeu1w04=,tag:IhaLFAVKvLjX+DGLGTCZ/w==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:nMBFVZyE8MfF9DIXa6rG,iv:yiTH4heRS5WOmICVmd/JHinZi8cDGR8WEQ3iNR5YGaE=,tag:LDMfYIy48ys6KahZq4hung==,type:str]
-#ENC[AES256_GCM,data:0UcSKTsR2qTNK5AnM3qv+Pe+K8oRiW1A2YT1kTgCP8AkgezrrUp11P4RHu9iDW8A3MyfjBtRkXZpWDAYEkSxtRMA22aPpp3b/M2RvKcsqRiMGsiU4HGe,iv:9vISHiqjilFFXYTG6/kq+qj1Yx/wF/ObmiP5IPMin9M=,tag:qGAjCQr78oSs0vBFqmW6cQ==,type:comment]
-#ENC[AES256_GCM,data:Cp/PuANQxQjjNFIoFriQ0yFLNFYbktpHXimphLTpoO2YtSBz0by1echor6qaEleeG+j1iBjYefAZlzLlmbKFjueKvWA6WPn5UE4RG+i9zrdrSMHqtGzaGiCI/5Nx5ZUUnlZJ1S1M+KdO7dgO3JqhlyUynTATJM3Aa5FSFA==,iv:ge5oQZ1kI+m4hrM7x+YDX5CL/SS5/mJrbJZ5VNik74s=,tag:W73UZUTwsSvNT43m2ZPsSg==,type:comment]
-#ENC[AES256_GCM,data:21x07f1qjUnbBy5q12UFy07JLObiIcOR4zfHcP18JTyApdFZDqR5YCxZkRDDNXRGEfSoHIqPucsrREMLW1b35l/O6f3MgSQ1HNzv/nvZXvU=,iv:19qcu2DZgEQVkgphDkDpU7hApvZSXjeqrDE5qMxGudM=,tag:B8Wg4VrMJ6TXAjXah9HLRQ==,type:comment]
-#ENC[AES256_GCM,data:4DrH7euu4Z2wNLN1CEMa6XY2YROVQnk58twuHfVkI6Wacq0uovs2RJ/AT3OQ/wZq0QYKBQAy,iv:PvohxGFpCnprQIjhKtfa5WW6+AtYC/7+n2mFZOs6xj0=,tag:fCBYQs78H3BeB/30FAXa1Q==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:owWWv5yEX/nero5f,iv:ZUKbbN0adJQ5gHGZQY+2krtzJoFL/rlvyHiOVJstjXo=,tag:GPNfNzOoM/q92mCRZIVATw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Z+CjbqiHTYJekYD0zMena3U=,iv:51wMJW24qCYdbQfPtp5zYfILnPKwyazqc64+vYKnUd8=,tag:9ifco3cJrv5wAUaqDJ2PhA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:40slxoQnkdgrEaGjALzx2t7QI6MF3ZvuWtaSfj5CaP8=,iv:VQblODJDFv6cTLszWqiwsbzfjE+52rrhprz6ezmN2wk=,tag:uMZ9lyLucJ3aApxOKiOwaQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:XRynh3VnuRWvy7E+YQvbtOL2HcBxVSJ/nGCerJW2PdB8FuOpzritBw==,iv:QhZZK6gvopfCIlEYd0ILzMzP5Zg18rvG+MvVKkxrnB8=,tag:HaAOWpz1EJCg1GbzM8PKQw==,type:str]
-#ENC[AES256_GCM,data:1rlodZa7hkdjc8awKh1cq8lsQ7tIQEYsDFq0qn2xJhHP21UksQqEGqThX6D+wXSZNzE7jMw3GiJtMMwMNuhHvA==,iv:gOQEOO8Z7PjLh/xHV4yZu15icSeeSWme3gLoDleb/Xg=,tag:9DYF7w7tnLVeX0xIeRLTSg==,type:comment]
-#ENC[AES256_GCM,data:0t5AdvJIXW4RapaIllAImmkDV8TNAkII1HLW8qd/GOL9j+atYPkqnomo85HqR4xMlpido4lMSi8=,iv:+KjHCiwA/4RXzwjCH+CiLuS8Tuste7l3DVz5De3aLDQ=,tag:XR39XdQEJhr07YV4QCKyWg==,type:comment]
-#ENC[AES256_GCM,data:sCe8/D6IOyhysIxCgcnpugmi0Aak+1X8VA==,iv:XrBOfvVlGz+2Abyxb3lbcrXExIAafkJLBHXtbucR7lg=,tag:ISAd43zyHEjx1kKfASaX1A==,type:comment]
-#ENC[AES256_GCM,data:74jnwkrUB5DwnmzxCuN24XlDwgIuRz2Z9ZebFcwQQHQbe43gNuhhLjIiNSfMSqmYfDpgMkrxaI3Y1DMhcIpvrpgZ/GBs3zR7Te0VPa0=,iv:qGJUUuCAe1UP5FWqnHNKOGn95bxvG7sCNrXy1zomdlM=,tag:GLmKu4xvczVgw4/5B14l1g==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:QjWG8JA0wdc6Bo5ozrpYNxmUHBhHv+y3W1/LdLl6Jw6Ju0Z65b2Hizandj2yODxU,iv:iF7vX/5c6BOVB9S3+iSE+Ew98UMIYpEQB8k3fRR/IQk=,tag:0A8UZ15lnMWdpe05vUzMSg==,type:str]
-#ENC[AES256_GCM,data:lda5mhFNKDRU16q/WM9w2lXY2J+Y/ubto6IEURSzOgfmQ2MnX3S7cbFKhIs37RNEGHg0kDy8zK7ZP4SiIkoNzWER+zWC2dM=,iv:xvJL1h9eXAHpttVI389diL/PeMl7c5Oknd+gt6lWd68=,tag:Dgg2/c3jv86Q2NPrq8WIvA==,type:comment]
-#ENC[AES256_GCM,data:sdA12i0kBzes+NJkZLRkg6b9lcpJozoOV5C8CVUDMFgkJj4m4p4CgWNKTZe1mecl2zkhRmBM,iv:HZ5+rNqMqRMCHtYARwFjzTT1gmPKV2+a4z9d1lNV5jM=,tag:HD1nxj8ENKQu9hBbW8spQQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:rFUaK4CD8Q==,iv:bh7z1RfMPrEA4do10+aaG573nvwAW9yh0O92r++w66k=,tag:dHb3xm+XLQQsU1KanxCnXg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:jzX7Bc86rsI39GHx4dBXiId6z7U=,iv:Q+aF6WBFH9HvpeBulBely8KLQjYusEx7gXmS9G28cvg=,tag:UnpXIr0RFJ6xpgmqwaXOnA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:sDBzUmS0NnUxPAw=,iv:ZgtVOajYYiZOA8Tg/fSywkob+Dj6BVpjwWGscvKLRSA=,tag:N4VLRedTo55lIoakWp0nmA==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:B9xBjTy4GrZTG3S0NwHL,iv:HEt45TZNlvze3bPp0MLyVJNxTQDkQCTiIpX9cWXIacc=,tag:E5lrenabeShbO0Gee2+IuA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:sJMp4J3qmiNm4pd4utxBKxL5XAzkwQnp4g==,iv:52N2v14wCeKW62QwJw5px5t9n8Te3CDwYOIFFxAv2+M=,tag:tpUZaWe17sNMzRGpgKrEnA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:t08P+Mtyym9TTuiHRQXFi7n2HHU/RASv,iv:LXU0jyVJPfDNuGUKaA5kxUQOCG7tnqOgeptO7vANHvM=,tag:FoXai1pL6vg1Dp2GM/B/kQ==,type:str]
-#ENC[AES256_GCM,data:aFtelY+yJwhNPnKb4v8Kb+yyu87TGhlWNFSxnDcwgSnPwELD9xM=,iv:fwp9CWYPcWcBQThZc0EYUOUaEnco4L7SRdhlhLPIPbc=,tag:4KuSkxiwclujdg06W84srw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:pPwCvDZcRId+IYayQwe3foLgBYY=,iv:fkO6x3ybVrzbhoF5pHM+A6OO90qXuVljrovwG0ZSiIw=,tag:6VLuYrgzHT3+A31m3wrrvw==,type:str]
-#ENC[AES256_GCM,data:NI3hsgOttV4W7Mym4/k=,iv:+fiPLMrQYBz6xSNyFHvk8nWd57Jhj5u9B2dhNq2/htE=,tag:8XC/x/lEgxe9Vfa0URB9xw==,type:comment]
-PODNET: ENC[AES256_GCM,data:QRyOx0/qnQoCFnJm/g==,iv:2l7/8l3/9rlAvkY3P+UDbcOYUJvk+f9CBr/b0OX4bJU=,tag:9iwjpHqoT/1n8RBdtMdSzg==,type:str]
-SVCNET: ENC[AES256_GCM,data:qtspwp3Soh3nxRTU7Q==,iv:EdRp3m+v5zmQ/WwpXVBRdsPJOEsAPtuoj2d4pRTc+wM=,tag:jnGSQsF3LhhHcKkOiDFhVA==,type:str]
+#ENC[AES256_GCM,data:jF5m71vJCBp8qPTOBXYQRVDCTnk82JLJwkHq8k+vxjKRPXhGobuC+r4/BrkosXubqL5x9KrZSVoVuC8u3zBj10I=,iv:ThdzwTjd2Shzxuh2fN11NgyAfjlh2JDnN2yhjlbqie0=,tag:orkG70C6ejEc39gtRKdR/w==,type:comment]
+#ENC[AES256_GCM,data:yu1pAA5UKVXzw2bOMd7jV1vW7SSWL0iGhRCnXKSUjRq/YSi1A2ZeE71yMXg=,iv:Bw6EZ0+EB/RaUtBb6UGJwqitwVidsn0+XuD8xVyLYsI=,tag:t5x8tJfUk5KcV2fjURM0NQ==,type:comment]
+VIP: ENC[AES256_GCM,data:DjpG3JsE09K6EOwBUQ==,iv:g9mrC0zK5BZQooHGey8uBYlBTiDouWplwGS6W2Dt55U=,tag:pMvi/6QG6eA/n2tl1FqD0Q==,type:str]
+#ENC[AES256_GCM,data:D6x/e4bO9xxbeOAtg3i9M1hmeTqY5KtVsvGO,iv:e/aoBKBzz4prBbYZfxshKCuUKfYnxeUR6wjKSXtYIiY=,tag:hSo2vTYsLd+4iYTApc/n/w==,type:comment]
+#ENC[AES256_GCM,data:TgZGY/K8xATdW/+2AH/Enz42k9EOq3n5c2B94NNfa1YZyPmae4V0EieICN/8RN/ZwRoZD78AHylFTyIxBZlpjPsKeQiWhkcawnZ4BX0lrOs5cJ2rGThe70o=,iv:a8yiKz9PGbKAthyWxky6QObkEXG36Nsf03yB0//BAic=,tag:sLv5FV4WPD9PA2Svy/PtHw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:qMMu3iXFEA5jQjtuDD8=,iv:1FErXt0gajBxYvx6wRB/KfAqtrNvr/tjDmFHGCCAQ6c=,tag:IsaCSVfNEUYOvD+C29yl7A==,type:str]
+#ENC[AES256_GCM,data:38VsJrKZzxWapPIrTsJIfBOl1p4RF0RmqLU3TnWsTWxJVQ==,iv:+vC6ImG/UGRY9VsDJ4/EE878axSNMfLLYMVan0/n1QY=,tag:sZQ+RCoOYD9EFhe1Vf3V7A==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:oGlJG4l6u0DjqC84eQ==,iv:KdUgVsHgvVcJywDqGuWxKLZ44DxkfyPAghtRUBI20Ko=,tag:HNW2xA38M7xkHPKmaJnfQw==,type:str]
+#ENC[AES256_GCM,data:fjmmLbMnY1G6vtIf+uPaYF3rCt4ID7wzQqK3HAwmagbIBpOqhU7oow7aAtN+QkQ=,iv:/f3cvf8bT2g7KLOjrSHOPwxFjuzWFJysERo0LRE6vsM=,tag:1B4PVC+QqYHjv0xgRAk/MQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:gDwi2cyGqiT0ZNGPufDxsgnV9fX/KnZ9CSDurBSxBA==,iv:zQnvNllEQVpNnbtuLxTVx7YS9Xtx3cApGweFZXl5rPo=,tag:mlqG1vv4qMy0hl5Az7W/iQ==,type:str]
+#ENC[AES256_GCM,data:BOyn1qCACoNxZX59bT97YAM+n9C5SCi51JkpAxzkbNJXL8aG+2LDKHgqHBhoj6k3q3NAvu87lXDI6JI/9sjzGCY9ky0oKpu/TSQliJKXsXAxlw==,iv:guiWb3qp7XjGcMPQrSyH7+ytw+oXhIAC66SCX/iUE3c=,tag:tTzoOyHhUZSiOEO0scdoag==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:Q0LhhNow/Ym7WRnOMTjg,iv:vGuhd/XvwLVJEY5eB2CneiA9B7PuiN0XTkVWCTX/07Y=,tag:qiXmAtzx6A+ng7XwUFKY0Q==,type:str]
+#ENC[AES256_GCM,data:+pYDNqTo8ju4GqX+Qst86N+Q5lmXPFy0MnZrzX6yMi85,iv:emIogR/65x5hsLOMzgPUtcRFb2UcuWpF/7vNtiuQeUg=,tag:VnBn3uRs9dwJRR0XF/0eTQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Xy8ChrQ6zjsM5+q5U+0B,iv:5fg3znk5TbhbFcbLW3zUb+S2qpAY+GdtLvyCx4V9/c8=,tag:K7qduIEVD0STxonuhz9keQ==,type:str]
+#ENC[AES256_GCM,data:rUbRBqIjkkeeBelmfXXj8pmYYsBq3BrS5KEEPCL3ylJEGF1e4Sdo8oTcyk7PvYZxkQ1q2kOJq6x5XEpbNBOaFEHBbVr7vkFOQTExLBxrkIQ=,iv:AIeAAP5djK7L7nJWGPWp6kFpPEgmlbaRcBhzbkuX54E=,tag:JtDfMKuaDTFqZMevYXMjFg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:KiTxY4gGa+yLrSTlGBnB,iv:y/P9pQJTCsfzGLSV4xJcE9F6KgJG2XFurVa0dc1Gtdg=,tag:KYCD1+wx/HvPg0j6aZNDYg==,type:str]
+#ENC[AES256_GCM,data:Ret/vZcj824O2miBlqEwCK4BQqHjuTbR+VBlrTMqWjUefIYTzs7xrcNO2ukYJwuaAKa4hkozJ8/M5xrPomjYm+VVgtQjaKNC8CrsTttnbdO4Zu+IWlF3,iv:EL9xW4NN5bw/DzDZ0Nuw96Kd32uZdvJKA5d70UTZ9MM=,tag:BJXcAi4K1JymOHIsQTgjBg==,type:comment]
+#ENC[AES256_GCM,data:Bd4Uav+W2nau5OhWte/5zSAaAbtLDNHSwUF6lt96Sjkf3v8WUh58VuXBJnKhiksT03ey2L5T9AXJfHVw0BM3HEMZmDnVEXxF2WMfK8+4xo6L69N7SLfUYXLe3wTS0iON8SBSSjFO8QQyiXdFhXd6ttcGRBUdlimrT6Ts/A==,iv:syJTE6AZZnZbd7m640JjGsoNOdy7sO4xJoliDX0nNt0=,tag:tCC0/o4XqM367wP++c15ow==,type:comment]
+#ENC[AES256_GCM,data:mrfq1heRoWr7O0McJM7KK5f0/u7tlkvyHMhTEX8qvAUBIjVgM9gpIZVgWuET4rwCiHhYylcYwgsfJ7KM+TbkIOPGA9dgaXhOnYPA9KDvEes=,iv:rFlUh5sgySQMNpm7dKtwkhiaAxWG253HHM50I+58Mjg=,tag:LEb5Bj9sYtYILSxflFLPtg==,type:comment]
+#ENC[AES256_GCM,data:PyNra5mLF7AlgTY8IO08/ajj2EbFIXLGXhW3ahrlAmp7BmysrQY7GXfpvsYzm+RGmotvJdam,iv:ZRs8FNMdVG0c6dFa9Uau2TWJxUzmN8twRAErgSzHWYo=,tag:QEKNL/PyrV1fy3tvB2kh4g==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:LmgwSMGDQLFpRs6G,iv:F4df/Jry3swWbhyMDb2TwRazxsT9y8Ou+bgJoO/lmrw=,tag:wdDLzjmIWrOzWgk1TJbSJQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:18He1MEC+kWIGYYMC9np7uA=,iv:9QkPof67HcZpGL2OD9y58bZUGdWmrMzJ/8IDC7SWJOQ=,tag:fBodbCrjnUWXT48o54iZMA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:1k2eYfMedeO6VNyy2GbdooVZlLn+bF3oLSfFUP4fb2c=,iv:5rLDpGHdesKqn47WB9DIlrj5sNnhJiagaZXUkOPCBME=,tag:KJ2QRUKEvyLGC+ddkxezRA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:KQUOtL/u6VfkVs2LY3Lfpz2C2kfmNrI98KGbe1+O76laeCWRXPC6tA==,iv:bp8CZCp4ppW+Y8RWL8+umUexadkGzOfSDiC8kfNGJvk=,tag:Fo5viXv9Nc8zTO+52kpKFA==,type:str]
+#ENC[AES256_GCM,data:530ObweiMHBGUL7AJan9Ouj2CogNcbP20ZTBC8p30JVlGIFQrxQaD4K32Zf6jiakle4D/ckK9rKyTdNwvrL1UQ==,iv:18hQ6qDjsz/4HqE2s/EMBGzwxjxz3WKHkiYZM7iEz3M=,tag:XoRHnxSrhYnWAZg5/zBAHQ==,type:comment]
+#ENC[AES256_GCM,data:6tXbYI9t744sRRUsCwpKYvZbzn+0mgoGFxkXwJHIpfeye+gIQu7JUTg85Hem3nkbIk8dS49GmuM=,iv:AV5QYloJn/4jaYnVQNSjR4N5QrvGrxB9spFShirBI5I=,tag:UbMIiI1BAqi+NnbFpIlZHQ==,type:comment]
+#ENC[AES256_GCM,data:Hii6iRfCC+Reb45AuEhHdQPQfHDqoXKMjw==,iv:EMUFFow6UAoPeAXzPXVhe/e0aFkBe/EkTFuOc/iz98E=,tag:i0BrDy8P2t0EhHKpAknORg==,type:comment]
+#ENC[AES256_GCM,data:xrGJDL7LefC+qcKoZCskQmiLJYRCGF6Pog0HpkUJsBj3llRR8FXU5HPpP7xsumKPD0LlJae2V9ZISOUN0xP4givcPvtqnysavyIAShI=,iv:XNLOjNNWJI2F0HgyQp+lQf68DO9zutFMX5snNABKUfs=,tag:q28kxdsPwiT0AOUFD4Uu1A==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:swJubvhSRcpHym+PbkD0g9ls9okYuaC76sh564y/rh1ZUZoV4fxNK6nCpXrr/NN6,iv:wRtB55ZAALFAOMj5n1uN497Pac8kNqSWSbBucb4HDhY=,tag:4m99mMtnvS4legTn+8SssQ==,type:str]
+#ENC[AES256_GCM,data:WM983QYwJ0e9InQh1VGsNxCDuljT4Oe57dgRKeHUqh7wk4K9rUzIST4X2NxaLeFAYtnxTVh0FeLRjWztYpHNHDxbNloWl4U=,iv:VnD7AVCUPig169PhCI3Ff5OcltXrE1T3E7299Xu31AE=,tag:nQqtdoNtUWuMAciIHmz/Sg==,type:comment]
+#ENC[AES256_GCM,data:tCnDeIW9NySntyPoNXu8Tfe+FdYl+y3aWeKTlf+bFrbHvn81jNjkBnfQGx4jx6mjZswA6PeG,iv:qZ3uuQaTEZ8zajuISj3AIcB2ppvIxsvM+pnMebJ+4Mc=,tag:OU9m2YOSUDufHM0k667YWw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:oW4ZxNtQOw==,iv:DYgr2gUTBfRJxQru0CtZRkv5VaXtBeKZ9JDqpXSu8Us=,tag:Fv1yGbAvyvwuNHKtXYB2Ow==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:augs7pgIJdn/gS/soaG3hMjnEQc=,iv:UMqMyAEwbrdnpr9RH6Vkrqyrin8tgjZdjULXwu+MEgE=,tag:KEmclH7oqIIGOk1cCEDnxw==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:B/YgIMQ5JUp4IzE=,iv:2HySo/BmDkxADPakHdTAHcFmaaFPnRZwdMUG+eR7rLA=,tag:XXX2jL0Vgyv2SpxmtzdTNw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:FDi5fhViAG06I+XXLEnQ,iv:SqexV16QVpiTw67b9UxIAKIZXrgoIckxZ6eBkuralxg=,tag:x02FI9qrevkuDjZ4N8vKlA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Xnacaq4UKz0wPloUn+a5Pxrfxu7gRsh6IA==,iv:E73CCJRRVLi0u8sx7E2J8Ngrl5f5qq0DNBEPjr3S6V0=,tag:eZ+bVl3qkzrYvXL8+gvQPA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:slOdnVO1W9z9I1VDNo1S63Ko9lGU8svw,iv:Fpmc7z9APqpZIZStuNlxhSqfbijZgRMdHhLIITAYER4=,tag:ij84+BVORHNLRHf5K5+6Xw==,type:str]
+#ENC[AES256_GCM,data:LIjc5Gd9pTHh7fxYhjqxD1RkRpl1fyEzqqRA6FIKx+/zPIcKR7A=,iv:YkJ/PWuadF2TCyIvZzjsq9060EyGk76o7/ASuPogdYo=,tag:5lN7CtLjKWlNny+63utg2A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:fowymDYD5RJIdvd5xX00FRz3A+Q=,iv:g6CnHow1HFm2Vv3uqLoJFxgSDU3ldY26C1UAncImdGM=,tag:0/kIVT8H4bBwge49Y2z6Tg==,type:str]
+#ENC[AES256_GCM,data:nPtcYanYm/xNS9U4aTg=,iv:9hx/8KF41eKSp0wdOg9flRSCPlH6247gYClQfKtnl0o=,tag:zUN2+kDfBE3Wv03A3fdseg==,type:comment]
+PODNET: ENC[AES256_GCM,data:Ek+KBGa96LKtFJhEqQ==,iv:DrJQ4E/Arqkdz4HsYhhC5zVVcufozvpFcTXZR7ZbMcU=,tag:qDMrlDVkD83KUdC8uQkOLQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:c9Fmqxeopz0plVtWZg==,iv:fMLeSmhLAA4ZCVtq8F7MB6CktyAjwF/JmGjG6OWvAzM=,tag:UOXLvxCPPluw/pBJP2z7jQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlUXhpdU9hbjUrSU0vTTVD
-            SGJMVzhLbFVDRGgxTnlIWEZhSElWd1l6dEFZCnJSM3VoUVZJV3FuWmRoSkJnOXZw
-            QzMwVGlVd0x4TERTSThEdHlrZ2VENlkKLS0tIHZTM3VVTjQ3bGJCTTRCOHUzbkJx
-            d21uRTVvVzRFK2pHSGhEdTQyRGordVEKEoOetwUpSwiol1QKm+ocFPMDQTxIkT4z
-            eAuPzxFQBCWy2ofnpTi/PbrOasb37LK/uyUYofqvLMyM6hVRsqZ8Fg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTENGVUJBVk5RRWd3RXhh
+            MnR2ckNZTmVqbXdkaHRsM0JTVWJMc2oxaVFVClRqVFhkck9HWm9jWmhpOUhSU0tI
+            Y3BaVCtCSmVMc24xeHp1M2drMEcydGsKLS0tIGhqbmY1OERWR1p5UUx1blFDSzE5
+            N2U0SkJPaGtvNXBDT3pRZ2RiaGdXYncK7ndoMOSUl4DwAg5O6srV6H29sqXi1Qz1
+            x1/KEns4JEnajQQGFDmZrFmKkMt7ilE+J/z5aeM3YCmpHwbq3Q4PfQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:50:30Z"
-    mac: ENC[AES256_GCM,data:7+GZ/w1j+AZcWBW6rSZBCrzAHLG42HITheGtTbgVufh9ghq9rtR+8Zf5HNw64v6Xuy1aE69sq+TIRmulX4zcbSL9ZS0aVsMn8PjnJEESnhhpgZitQapH88RQ7mTBL+ZCRkgrYn0u+ow4TZdfMGGkcGOrHnPy6+q6VRXosfirn+A=,iv:r3C39+3IBm5WRkCqAi9ibjNdBsq/4KTE/L7TBKAn/Jw=,tag:Gm5NoGg84bqKWOcIvC6ZWQ==,type:str]
+    lastmodified: "2025-01-11T01:16:47Z"
+    mac: ENC[AES256_GCM,data:xEyq8p1OIz7dpLjELvzHV5aWvU3ZkaGlOvXB56mBcDBBUv4rmE4CIAPoRzL5wMy3bHiV/2CTVAbtjsMdQXf1hw5Nn3ZDtk7SNQfBKwRy84oi2why4VEKHsGsHERAlEfZgFwMT7M30kpj0XZmhL+N0L5oanzqv1zUvh/MaMgPRKU=,iv:vzG4+uXtkJ5tTn9qyYpOeWOsmBYt1Tp05xFjHlbX5iE=,tag:TEHCqNg8FDh5PVnEjPbzZg==,type:str]
     pgp: []
     version: 3.9.1
