--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:rE07KUEN6BPBm++Jthr70ykR0Tm/5gZsmqYkTtAyguBbvVgPn8NpVDTdQbftDa109FEBEGYobnNwq++umgqPlq4=,iv:1K8OUD3hfYlsGuZlsSkLVKczzgjDCSW0+hPdfLGJ0cM=,tag:T5XeItAY9n1z20RCwcBa7A==,type:comment]
-    #ENC[AES256_GCM,data:ShKd9BzxqPKhWzLGxtrmDAA7onV9H5FNGhYcZUfV/kDdW+MOC6kbI8wUXmc=,iv:TAW6CO3e06dBO8swZMy4otnEOvTwbl3/hEk7JMtpxJo=,tag:8N4hHbGPGLZNglV6xFakZw==,type:comment]
-    VIP: ENC[AES256_GCM,data:eTfDIHbqcVBTyk7O9Q==,iv:VQKD82u3uQgyLBYUHWXKu8ywlMisprEq+yyWmJXYsp0=,tag:Mv+/2FkbwCTT92KBs+pH8w==,type:str]
-    #ENC[AES256_GCM,data:1LJ9L2gXRs0ThktHojc9DRDV1NUMcUVV0qJ0,iv:JDhrjR+WGMofg6RdHvNYaeRDn/ISezx8igYzmOwJgmA=,tag:y9sHaiGCGBh7aJAodX0PiQ==,type:comment]
-    #ENC[AES256_GCM,data:y3NUU1t2+6Akisk4hoMN6D1CiMIC3TT63uW6ohb0xJH4n8HGfPoxOuAbEmH9LCvLY64OWzMFSGSaaNvPC0SBik8CBMpopxEB+L4FzK30YN7nduy6LQlGEXU=,iv:MNlGZzg4be2UwrDy6KfWaqnc1m6ueJpF+l8ubrChRPY=,tag:ZOuunyulK4bzSOe+ivHL9Q==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fbPRJUEEV/dwX5Xvj5o=,iv:MzMOcG4UMMDH4bHVjDDZC38gtR/ZF8iEpj+0XubUN/A=,tag:u8Tb+rES4iSfG8xxplNWzA==,type:str]
-    #ENC[AES256_GCM,data:GYJIb7ezgOiG5s1/H9ZplT1BlstpdQGJ9ta56BiQS9ra3Q==,iv:zVMeoOQ5bE+Kp7D+jSmFcqusw7ZbluYBaIH4Eae7ULY=,tag:FK5GIT47Jiybm0MDxzRZFg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:abIOLPQjSK+A1qtQJQ==,iv:owVbUUbNef1QtWbh4qHKLqDEWIVwLfZX7fLgoxq89U4=,tag:WdXAhFvjMk1WFSUKr/vIFQ==,type:str]
-    #ENC[AES256_GCM,data:W7BuojIcAh32lVRS/ASKdup9pZfSio0x/HqHUvMDIF3/YIR7Y4S8s0Vo1VsMAek=,iv:SpkVRRiWeTOp1Lgh5tU0IhFKP3cSX3bGm3S+ZJuKRHY=,tag:k6Hm3mha0AjRi3ykLVQmFA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:ESFyy8kxN/iQDSI24BI1y4UzN6WuzhjYxMsFG/9cJA==,iv:R/v3Zv10ch4YXFY2rnrbNU+Vezj3umvdBjc38+OFSZE=,tag:c+hi6wGSVC9DQmDRMw2rSQ==,type:str]
-    #ENC[AES256_GCM,data:xRuvkAjfQUof1LOoXoYy3+FRiXL4bDd9srmamx9Mb0KH7IwCgMoT93lny8buTpPMv/RHrL9E5DZHFgermI2RR3ZFNxbCbWBufarELa2Z2oQZMA==,iv:eVUYajo26r9+qRyDrtHf280mjrKFm2fvlvxezNqDxQc=,tag:vRMR9ybMPXX/Xxr9EUEBhA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:nX+Sn5TOkgR9zFQ6iLq3,iv:W+NiM/3RzMnp0IIsYPP61yrtc7+6OzTDSNwk18aHkWU=,tag:Tf/Ts2weAU5bL4j/kp09wA==,type:str]
-    #ENC[AES256_GCM,data:h8pXoXPjlOjYz89A3s1uZNFtJOcM8G+lHY7trB9BdJbV,iv:SiOGoq5GRYIQtH4lYjJq4t2z3+5zPmWqXDQLIjOPlOI=,tag:kRBJTiLZ99Z29CSLkxoVAQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:nxulevYq3WXk4lEM5RW1,iv:s04+JNpwosSpP2BqIZ/kZmxjspapJLFK7XmmSEIo2lw=,tag:GOGJyTfqMuJfREronZB92w==,type:str]
-    #ENC[AES256_GCM,data:jdIqP1NR3+aEuUbEKrWpD7pYNMQWMzLQ1rOI0nuoOISLYrk6TH3YaRmx79fg+bKKI3wPOcWPRnd1w2tKZDoq8czognQZxuQx2bLt9jPJBl8=,iv:i1GeQRjemIM648bW+7KwDgNPa+NLRIn6cJiRpzmnWFk=,tag:WPvfm5M1KouH0kA572bJXQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:DZj+IIvvO+xSVBkZZSLI,iv:SnH0qQwtjVu1b+bLMRWm5W7kV1AhdZRRZOUHyngY3oU=,tag:k156r4jWi6szW2vW5x31VQ==,type:str]
-    #ENC[AES256_GCM,data:nfhkW/Iiem2wZW07qoaXfq2fsV/3qyCkXIwQ231IeqfPEnsWc1j1k59/7mxq7rluaAz+HQ+Fr5pGGaEukZFJ+izzQ2hvEVQpO5Sv84vqjh6/5xVK+sNv,iv:hAEPnyuG5/IsQKXb3BRI0Pa0jhfQ4CzuvtQTe4cEmKU=,tag:IMQEwUQoxlCrDSaLkCOUug==,type:comment]
-    #ENC[AES256_GCM,data:9q441GqCSWSVvbCS/UhjMFIV0xEoW8Tv7YXy8coveS0vYqjYyQze1s81yNv3lIY4v90pPNM0Fuows9/n751zPCH2rqmbLYLwRPUScPKEncXtnGzz0YGKdaAL4vBcsxWczCHm//5gPY94/hf4Mt5lXar24pmnhxtHHujm8A==,iv:I7u+rYacLXAw6WQTPjA/SEbo8nLny+88LUAwlsFmBSs=,tag:cBemj6wZRFEmQwxGoFuf1A==,type:comment]
-    #ENC[AES256_GCM,data:q2vAq+2c6QmftoGwgh2SaFK3uwgnrnu3NY+o2KwT7wuy0i6jjMdU4SX2R89h4mQye2ORFaFNUjHVtURJVk4Zv16blr5mVTq+W/Pz171HIdw=,iv:bRRUM3aF/N7FgfDwAxCpSbBHkOIPvljr2TnzEket6WI=,tag:TEc/j6gkk7J5K0n0sDjgFA==,type:comment]
-    #ENC[AES256_GCM,data:yfHpAueNvPKxO94qEWEuSuQ2lR3mzSQEgjC9fz2PSMbdYQeFQJf5coZgzifHxbBAilW7zTel,iv:5mDHVlZz0FSF3KZd7gZ/QoOhAYTBlm3o2nv5vPHDUAI=,tag:MIGE2hI6BigOSDmscWvL4w==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:24sFxRJwxXzH3sOR,iv:a1P9B/8Q2FKZChLbu3kVacLEn3Wx5p0Nv2gOU1FW2VM=,tag:PmsK1w3JPq5UYIFD0187gw==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YOckFHziifGNPMYRRCBL7CY=,iv:/jtTSNxLdzEuv/f65MctAhyEkd19uCxTeYpdBrjq1kk=,tag:jy2kHA/iw5IuZIbbpUg/MA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:vGKec8BvQSSjHeps0UO9rwt9AdDdbESOreLKc7ZVtss=,iv:ujUrhnRUa+dVUivuicV++n7oWYFV2HoHgJmlX53xs9A=,tag:1cejxSXt7Wbal/dLDr7KEQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Lhns8qig/kSfKs8mQyKFwhRM4QjPzVSjUfVn1dJgYwaYZaq/JKzY3g==,iv:e5CgpQROpBIoSzWJj92+ivJDtQaB3DTmnpNU4sOi84s=,tag:oQiBWv7blk+Jb+z5yi3lYw==,type:str]
-    #ENC[AES256_GCM,data:E9GPI8Sd8aJ1zd4J5b0LNPqSsjMGTHh4GJiWqW/+EfagD13uUStJ3L4PGkLIRJzWCAqqwIYwJ2cIybeEokEZ7A==,iv:pNZMtRO19488jh0J4fHYvXhIHoqVFQV6lBRmKsRsW2g=,tag:sASeUJYBPorrZ0+3dHrwQw==,type:comment]
-    #ENC[AES256_GCM,data:UW0sfYniZsU8B+ppxlXD/p0B6T0GocfUv3fDXntRHl8Sp83IyROct06yXg81oiyujDP4kcE2WIc=,iv:anf8kjzjVwV+JidujKylQlc5LvW3XX2eGcRyotN+m9w=,tag:BXNWYex6NcmA9N1etpSMfQ==,type:comment]
-    #ENC[AES256_GCM,data:4wQvSwqAu2zmh4LLqqFozibb0+6n/UYSRA==,iv:TBVxOqRv4DttFtVXmSd9TeCafGvE3TudHLFDhyTNYp4=,tag:j6G41Cdwa3QrGCp2Yb3yxA==,type:comment]
-    #ENC[AES256_GCM,data:dNGv8LyWmulocvDvbz29cziKPRLOaq8X5syLk6mhFy8aItHqeySzh1ovXy3RewcyFzxh6V1OmAnkhSIXbSeQJJJ2Vf0u5W8WpYxvy/g=,iv:P4tUbDXwk640shuEj0KydkfMtRy9wdJ/485RjrEJDs8=,tag:+C+TalvEI3+BPAy5bvRx5Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:kLpxh0ajMCtH0LPF2fbmar4tKXIAB/0y8Cg8/OPv4+/Tb9sP9KCoUA7hQv9mpX6D,iv:nUa8/JESr6CgKD1xUX6DMwUP4dQGYJ+shTIQO03+jeo=,tag:gjCw0hVsJjTothvOhh+tDw==,type:str]
-    #ENC[AES256_GCM,data:1Iz4o4KdBkkfHUdPzQoF+jMBoXgao42a+fpgrKKlqZCEZNTOLOcvm9FRABtwd8l1lESlNMrAVDhJABx8UiUczzhn8izu23k=,iv:yRVZZOmgHGkYQbMuQlubkKgX1hV8+kOCeZvzPsyepWY=,tag:4XvUKLA/JzUbes2HgQipgg==,type:comment]
-    #ENC[AES256_GCM,data:DlqWXJ0VfBJRXBTEaveHBkL47ex7Us/Zzkc/6YUVzmBp15oaDeqUOLoDpCu/Sy1bNGQqOr/6,iv:Co+wOpp763uJg8UbcvdnZlqYFomcbw86dSpf4HTJ8BA=,tag:cPdZbPYMAFqVFVJLkpZVmA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:tcHYsi8qbw==,iv:Vd9UJVsTmjDEg9HzdVYYHS3qe3eal3R+Iq2rHn23zGQ=,tag:1xN0JBa2ZT5Q/9XkTMm6oQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:em7IW2kehbIQyLjCST9RwUBP8XY=,iv:rU5+zY0BoAoz3EXQ9xoYw02VA8zUCwTzlnnJs7RsEuw=,tag:2sREg7HCx6XHB058RYGHFg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:ZIrOT8Xers0FoH0=,iv:abZWSS3ZwXxIj8Dn2pxA/wkTSDGRtxJyTdLJRxki2iU=,tag:thqDPYqT+aT2zPQwQ7Txiw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:tF2xipzaAVDwYIKv5BxF,iv:VOUUPT7Nv0XxyHTILbheggLhL2fIrea0mSB78z66qL4=,tag:PEHsJwQ7+L98PNGHeROlIw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:vmlXZ/iH7CQxTDR5wZZXiGgWtN7oCG5WgA==,iv:5cRxlLcF0bL6DR9M64pUuZsCAY3aIrNBQZ4wGOzqF6w=,tag:lkPvzNTkCFx9TmFOI5icBQ==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:hIkNpy4mTqcZK30YInrjCByf6euUCEIx,iv:sliAV5839utSRz3fECG4IxHR2TWf06g03gcaQzI/rXo=,tag:Z85Tac8pLOOZL3CwA/XsQA==,type:str]
-    #ENC[AES256_GCM,data:3M3wDip5yiKEIgIHbfV0KpJlUML9U9z6QgeRm4ZpNRgcrtBXWoQ=,iv:LZUIInRmbZJ9kTR2Rp8j4iK9ENAJA3Dqqyeyk8Ije+w=,tag:ATQqK8ce9+2S2KmJD6LSjA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:LPNRIeLxQOBOl4l/+dcRxEmaN8s=,iv:ivwK2ruBWnsE38O+mUGHuI9Kr9HsBqbaOUo07BEN17Y=,tag:kY1mcEXGwfhtvmbIYdJagA==,type:str]
-    #ENC[AES256_GCM,data:UhTWKVlhSE7sbFS60nk=,iv:TgMVlQjb6EC+IyQR8ft0vEJk/7ppIA4nkt9nbWw+og0=,tag:hSFwlxq5YcGPfALsT18MSg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:QyiEPidM3Vt48o9psQ==,iv:Ck2CMCCrzBm7s8TflARbpVqofqID2/zMj8Jz3QG5qiY=,tag:vcOanMuP0d0vOrsoriA9EQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:pOnNf6g9CCUdNiCz3Q==,iv:FIbnxFLgnREcH7ZCRx+Vltal+rNUDOiLjSxnitWK6k8=,tag:+H5GhsIYVVOzMcH/oKCoXg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:vQXb7A==,iv:viTeInvTAvO8b3dHroYG6JupttOJbEXXatPDbewKSSo=,tag:PvhvlYMCgYNLY+F3tn98zQ==,type:str]
+    #ENC[AES256_GCM,data:YOIIIrsE4+LpaFrrBLa/U9aJV55bOYmjGVFl6J4EXSUNrY9WHygIOeC4Er85nakexkrroE1YIDR19/+Wq8/06EU=,iv:Xr4Rfa9HDGeIZ6fNE/4EFOoA9k7lj1gCFZlYVKLCFeg=,tag:856yKn8KuvnojWquTUhlcg==,type:comment]
+    #ENC[AES256_GCM,data:/v3tTOPeAxAKXP/JhGC3Gg/+NH28fEO9WuhXcMpGg5+bAQezDk64Gh3feeA=,iv:P2xvHpne+qxjbiIEm0xLDw8Ucn6/CmKIxkeI4dfQDJM=,tag:e1QrohU6ZOFycxtXFDfPfg==,type:comment]
+    VIP: ENC[AES256_GCM,data:YgAklRdNeCQaZGgbUQ==,iv:GRPWqCU3rFF41dFvVEdeQ3+pOnYzALl/SUQYwCryVBw=,tag:CCMf9QCSSlchGkYwT9awAg==,type:str]
+    #ENC[AES256_GCM,data:kIj4NBJXXvlTW2R8WhX7bfRMs7QEOr1eb/uV,iv:jAA1ynKdIxnPjQAxdAzSHGq3GHhlNEzne0CunJVQIM4=,tag:biTrbk/l6AoKX2BbZBIhiA==,type:comment]
+    #ENC[AES256_GCM,data:+Vb+7Tgchq3l4zf/zXPmVk+NoCTBltd5/GOaMBowsI2DmDLD8x2+YGPV2eVJCY6j0oiiI/BzWoax5/blvj7/q+dVfM3rCXB6ROEVY2tJ7kvrWmLvEMf65wo=,iv:lmWtT/KOZ4pDAHTd7QRHVblrzynClBNSiIJ15Yp03CQ=,tag:uTRt9wBnGagQJ+yV1pXvCA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:qWFZM1SqZ9MEd/D1nGs=,iv:nYSqxUq1OFv7TVq2iEyeeRVhsEilfhksnRzTPDfvc8U=,tag:Lib7HjnrH/tT7pnivll3aQ==,type:str]
+    #ENC[AES256_GCM,data:cJk0hYGPXceKJfdBzvd4Hy9h30mDg6vdXU7A0AsexQvT3g==,iv:M7WGzR4N+V0FyG4yMGzSLq3X7yjPwfNEFsuki7NfHPg=,tag:gG60rOtGgs+Glj+qrrFBWg==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:JuEWyYGHqZoRPZM0bQ==,iv:kuggdY2Hyhtev8VKW3QNQKKMhpL68eLpQIHGOY8Z/WE=,tag:mGn6gcrVlY/sr6r4qt0zeA==,type:str]
+    #ENC[AES256_GCM,data:9ZiJ2dM2M82VrtIDwhDJxnCpGq6mxgrZmzxC1SCTATbzjbeRpSYqSjK6M+axBEw=,iv:q+glcZ2hSF94SHNAKXC2cPztjIYM+qH4qCPd4BGeRek=,tag:yPUVVg1vM5wYFAx9+MzKeA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:PzRy0fMnk7YFsFj96bvWMNhC4DpICz7+5O50YyLhhg==,iv:iSRLydyZOpMQL5tfEhxWNw97o7r5Ebw6k8q0utgUkLo=,tag:HwNNlvZr1Gmq5VscjLaLMg==,type:str]
+    #ENC[AES256_GCM,data:FsDpQivBGgGWrTUuuU7x+6LX2SgMFYNbIi4BxvAk/Yw1026yvvsZ2zGMY2d79B8vTNO0VBQeqV4qSs/J9+x0iD62EyfzEQBpgtfVW03ake9Y1Q==,iv:JEOlz8bZMSzIr/bFaHtjdRufzYmC0v8t5ScmLdi5ECo=,tag:p/hFOaGkm+dNPU1ZazxS/w==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:tZyrZQGbIn/BNUakdhog,iv:BVOreKpU+BrI95fUDbySZdCPMCV7C7jpeS+/A8YMdUs=,tag:DYtQnTDInhvHuo3BSsusVA==,type:str]
+    #ENC[AES256_GCM,data:WJHS3KUI9ftTbloOiBHwX/AxStLvtwF8Nm4wRs1LPCif,iv:4+Ezm3sGB/sSELc2a3h9TiKwjyd62LgVa048BeqWuGQ=,tag:Hd1mlQTuL7vFrLxP8tYMTw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:W52qgYxak8b/eKARdzic,iv:X3B9ltBSSqe+JTNkru4Cio5XWeI7PQ04ir95/ZC54Pg=,tag:3MAZkO3AsaNtfGff8+cSyQ==,type:str]
+    #ENC[AES256_GCM,data:GV/jZ5KyXLANKL3L0gyiG1XDWb6DVhpQZZVS+bL0q7MLrXKJc0pJhIPqIdz4bASakwTEpMO9AWH0wxfBZohLXHFph3nBQ+vYrg5xCjSxNLQ=,iv:VOg28fiL9gIaekOojQee5KS7DI/41JvC/+sU8NNTLcw=,tag:Am7Byx5QXPptt9G1wwPPAw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:FvmjZt4cyFwZTddITtaG,iv:BOmIEBcYZwEmdSPwBFTPfeWuZE/4e38RSa5ADsrBEv0=,tag:BAURdRmAyVvXfFD0yXVv3Q==,type:str]
+    #ENC[AES256_GCM,data:ZMJxezzLk26H08tDAizHLQ68HTj3U0bwuFKbY9DpKSsjmwfB0nInq42a1geQ730AST5H3LMk8dQWnCKm/tOUAaatdG6/QScmezwhupzSXWz3KaSzRDVQ,iv:RET8Ekbh312cYjEO8Vtst7rf/5GYWli+j7OaPTYXjqs=,tag:vvHUvWWJ0R638ngDkmqsiQ==,type:comment]
+    #ENC[AES256_GCM,data:eW6i2GSp39uH0bmUBF7ly2RolUtrEEHk/Xx3UtrRORCrSDgufzZkwPfWr2Etlrl7xjTDXaJAWQp9nnmW7g1TkMao3nWMQ015NGLlWdb7dRZ4DnSWKwXyW5A834I0sigAsf5oWNCI9xbvxDu3hWOiYMSSaUff9HptrgSrQg==,iv:EhCvITH+9YTIN3JNZ3pGt4Qrs8SYHW1bAgI4nuA3Ox0=,tag:QcSIJx+vtTWD0QPczXwqdA==,type:comment]
+    #ENC[AES256_GCM,data:tC9u1nvt1sOaru/zBoaJ1+UaslahZfy+bJhyEFIOpPss01LUVLXSWuHxPlXdRrCTnRSmnnGSe3qV21mTxPo26Q0E9ctiaRbFHriEYlr7Id4=,iv:zHkHt/hH5T4ZKP1wQ9OyMJsTr8WIls6Tz73OMAfCgQ4=,tag:tHniYnw3CtioI+yvycxrSg==,type:comment]
+    #ENC[AES256_GCM,data:VzdnYL0dglW3VfP16dsISC4Cb97qeSuxxROubApzI9YStmjEAuUH9ZeMMQ88+IYxWzY2RBlu,iv:F6Z9C0G+c/QussJvAduTdhCVjfWwrcYEgfPGotx+FQo=,tag:USn15VlV4a3CHaCqtUrvfQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:lrIExpf1rNIzpYl4,iv:LMI9F3UJWIigVrTD/uThB1rgSl/IMyyTAKOdkjoPqIo=,tag:uaE3cmgktNc01k7QWsTVMg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:HFO89H0R+fssG4M7CibRqkU=,iv:K0dBZWHO/yHuqY6jYQ6GhfcDM5GWsX3lMJH27774acw=,tag:+/QY32/8jVR7pUDmguHpDg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:vbN6+ofYh2SLdcC+BqmjWUuv1wBUhJghmVN8C4SFcsw=,iv:UD+GtgAOAdmwqfQ/RQ6C1eqhLZ+EqYz0inUHXn+Ol6E=,tag:QnXyMoQeu/M9PeJ0iaYhmQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y1gpj6fYtYW7svl+WEh48I/0DsgcmUQkGar9Q9Jra3YIDD+CNU9hMQ==,iv:B+1d1wTmRGe3+eTU57z5Nr62t1qY/ugh/03vY9Jp8Uc=,tag:+Znxa6j+YwZv1eGau+NVSw==,type:str]
+    #ENC[AES256_GCM,data:Njw9IvnpaItIRNWSgGWowgLRIXzcHJe075gV0leRiXXMBQwyKh2/q+wa53dPAQVzUiwkJvRqbDg0sRGk7pcYpw==,iv:tvwah+VLC2vt//VfWbNp0kOE1/2xseJ/5f5+JN6754M=,tag:pmgPtGnyp8l6pNmgdsjHyg==,type:comment]
+    #ENC[AES256_GCM,data:XD4Tl2UpocoRErom47siialHECm/MswsGfwy9DuB4Pymk9H+QJ+d1Kpx9Uum5xd/7cfQl5M0dco=,iv:5MtpqXnARMn2ie2yLE4JktSxF/nd1QM1f3DOuGTLnSQ=,tag:whkA2LCNAywR7JsMU292CA==,type:comment]
+    #ENC[AES256_GCM,data:WgHeuT284x6cVx/4JrR+mVrmQh2m9X+NXg==,iv:u1Tzp3pr86KgUHS/GWCUFPeHSnUlwizhTRSer3DWJjQ=,tag:RFLtWUQvC596seUbVTio7w==,type:comment]
+    #ENC[AES256_GCM,data:XLTm2/fgbuEtHeM17VWXipbTEbBMQBSOiNJCTLjLGvUlcb6V1FCjH5JXAhFpVn14vbfEeNN53tQT97DZ+0+gSJ5y5OHX7UkkO5XoXdE=,iv:H1MX4V1X5PlcL0sA4Rq4zAeLbaqvz9Vh2P4ldUswFWM=,tag:Gu5AMiPZ8sfofla/OgvH5Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:0R66cfxOHGrK5Ir9feACSHkmfcyRIT6dy+wPGPIYYAPHUm4gbeEPcGa+0b9E+Krb,iv:IwQ9X+3ugTw19jbVUY0DaP1IHdtYQR1VsxuzPSESmAg=,tag:cINOXrjFaCv3aKmRSzvqeQ==,type:str]
+    #ENC[AES256_GCM,data:6X/yQiL1mNl5tP7hN6Ega5IGUpXVAMbmK8StmXPVaiz6mdoJ/DZJpYdsCzGAyO0+YYhh3iADyg1Dci0o0YFC05sTOEyFuDk=,iv:IHZ3G26xWwRQujkZ/pnIYbuhQI+8yNJNdEojFxs11uQ=,tag:1SYdlENoqg+EhWy4KiOIdQ==,type:comment]
+    #ENC[AES256_GCM,data:w/cvQKvuN/jb9O4s36Syx1nJqbouktZ1RyStA8mR1wip2X1xUnOnBPb9oto3NsqZCPRVA8/M,iv:RlYBcbBROrI8ieVzxMO3iNmDu+5ROFf1WnMDIEbKTS0=,tag:4zy/NJKpfPi+Ri6acgffWw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:EAHKudWmLA==,iv:Musi4bzYPnFwtoqIc7V1//REytmpUkeP8D0MVs+EQY0=,tag:QOVat9ueqQtcqAL9Kg7UQw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QVjrrY3F6K51/eYKDVkDA1inkSQ=,iv:80YJXTjHJsAGf/jMTPmU+N3TVDMMxlWdMnj82rqGksM=,tag:+mECsvKZ5eedqegpplJ9GA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:kdhDW6dauePoqnQ=,iv:YDJEL2MTowbO7upM+SlhHrHomCAAZ/8o2367DFCZuCg=,tag:5YQ75yMJiQOtprIJVTNCfA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:J/JFUgte1oyy+zbfgCgq,iv:hyYNhgsLKejrbX3qyBF/STEpY6bdGk/6tDc1FMzvMfk=,tag:n8ZcWtM0sTorHn6wVRBPYA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Mgmw+DrQSA9PFLFEJvy9fXD5B+LsD2XJqw==,iv:MiLhpkl57RqAqTC2G3o5er2tALgeuAbBHLDaiaNeF4U=,tag:BSkVFtA9KCR4K74vmKZHEA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:2ID5bivBCMRwk1bDwE3KH8bzo54nvumA,iv:u7tGa4mhhHg3DFEvGXop9UC8EChGLZme1/Z6SGwDBRI=,tag:qzIG0ofN9EBzMZHgS1gFAQ==,type:str]
+    #ENC[AES256_GCM,data:K9NijeBmn0WYRamaVGqXlKzIRJBKlvuRlcJ6O3peaw0F/mGHDLw=,iv:F71pvvFE6Ien5HUTEJj5dVHwno1O5Z8bKi94YpZgJvY=,tag:HwyS4Kc0CkehkxA5CmuiIQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Sbm3ks47zCixTQGyt9AbpobmJDM=,iv:LC/gJnhCOcyhoCv8ecYjVeRy5j63vc2WkIcp4xTs6Ts=,tag:j8BUSXDIXDlv5bHRq9XHSA==,type:str]
+    #ENC[AES256_GCM,data:SQQLrfcz5c/NACVa12k=,iv:jv2wh2YuYUbMuw93ffq5BE53rxtnsNBm+s+FG7f+udg=,tag:UX6yowpkfYQKlYHczeWJrA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:K9Sn5HBdFUfSMvbC3w==,iv:saUBxQhmvYVTJPTKH/8yG7JdSjhzI7/lYjfbBpEpFiU=,tag:+usjezwqUL1BfNsETFOuWg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:H4NYmXKRO1OEzeugcw==,iv:shgBnKpUURrWZjLuDiiFVuhywyqbuKiYv4ZyjHZk7Xk=,tag:1Lp7yXsJZHEKQRxZqEGswA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:RPO0Uw==,iv:D57bgq3G6hEk6gSFJ4JZU6a0Hpg+NgNXFavGGXvkFvA=,tag:khm49byWI5yxN+854MTGWw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1QWtZY1hxLzZWK0E0ZGk4
-            anlOTVJuMUtKK1QrTVRZbnFFMkt2cXJOUlZVClBlWlByREovS1JRTTVnTjFDdmdB
-            SURqR0cva0MrZW1pMDBIMWRuN0czTEEKLS0tIG05ei9hUllUYkZUSHB1cGlxR2o0
-            Z054M2tHb3AyWXhTZzZtSHJtRjJxV2cKP1DKDIeOXHVwvjDkCxCMyrNGaX7hoWaw
-            xJbHjGlM72G/O05UYiCBd5ZCOfADq5+Cfvil77yM3Zln0WOc+tSjMQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJTnVKcEFFdmRTWDl2cHVV
+            cEQvMEROK3U4Q2E1MGNtN2ZrekpBYmUzalZzCmM2ZTdVWWpVNE9xWEpiVTVxNU9Q
+            RGQxeEs5N0I3UWJkenpuNm41ZXd1NUEKLS0tIGszQW80TFluMVBCbGNJTWVnZXNI
+            czVZekRsQ1BpRmZwQW1WRkJwUzR0WEkK0y6Qwdjzuz7bOjj5U+t7EUCaDDKryKJo
+            0K/qtpeo8UQnsisD/UsZ30FBZF/6ne+jBfBiWVZQcqReNXpF22y5sA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-10T23:50:30Z"
-    mac: ENC[AES256_GCM,data:ADV26J8hfzCf4NpA/Vl8ap0Gxg3Qem+4+3V7JtmpB772TAKbRckeUUgsb2+4gHmQC5tQCbnXxbdNvcRZofRTo6SGk91SRNYNI1HEt1wTl99EPACqlSy2xLVlT52S1KTBJccUwLlYQRPm4ghQRtncdOczSEOYlxhOFsOiJD/s2Jo=,iv:k5jML3ZA7BJYix07Cr8GOTLXJnYJXwPUNI6cDTKd/qU=,tag:u7Th1vmIZ+qk4/Rsv0n3AQ==,type:str]
+    lastmodified: "2025-01-11T01:16:47Z"
+    mac: ENC[AES256_GCM,data:JAkBPgkaAAy27graPCieDGpVsyd1k45rK7tdtXXq3tLLZX1udN1h/h81mjPhcD/Osu/TStCjOoP4aNJXR6e9gFkeNvRnLCfdK+Su8g5hZ2KER3Ee1SbY88Gqz7WIgfNrfF1s3XuTo+IcoZVLGjI4yBsXFw8x9l0NC6RcGIDf3ck=,iv:6uzkQp6jaV/cvyHKNCbuVytm4LkAphj7ro3kjTbA0AU=,tag:ZLtgzkNRHJmgho+wj+tZsg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
